tests/invalid-syntax/58235_id_invalid_start_character/id_invalid_start_character.agu
-- Author: 58235, António Almeida
-- Identifier has to start with a letter

let 1nvalidId : Int = 56